@@ -19,6 +19,8 @@
           parallel mode. This change is done to prevent cache leaking when the test processes are forked.
           This is a backport from Creme '2.7'.
         # Fix EnumerableModelChoiceField handling of callable model field default (ModelField._get_default is a PROPERTY and should not be called)
+        # The EmptyEnumerator fallback now either raise an exception (ENUMERABLE_REGISTRATION_ERROR=True) or log an error.
+          This change is done to prevent issues with empty select when an enumerator is not correctly configured.
 
 == Version 2.6.9 ==
 
